overlap solved
overlapping and alignment issues solved

--- a/style.css
+++ b/style.css
@@ -178,13 +178,13 @@ span{
 /*featured image*/
 .f_image{
     grid-area: 2/1/3/12;
-    height:40em;
+    height:auto;
     width: 100%;
     margin-left:100px;
     margin-right:100px;
     position:relative;
     display:flex;
-    flex-direction:row;
+    flex-direction:column;
 }
 .f_image img{
     width:auto;
@@ -192,6 +192,7 @@ span{
     box-shadow: 5px 5px 5px gray;
 }
 .f_image .content{
+    width:70%;
     display:flex;
     flex-direction:row;
     align-items:center;
@@ -206,6 +207,7 @@ span{
     display:flex;
     flex-direction:column;
     justify-content:center;
+    margin-left:3em;
 }
 .f_image p{
     width:30em;
@@ -237,11 +239,15 @@ span{
 /*featured articles*/
 .f_articles{
     grid-area: 3/1 /4 /12;
-    height:40em;
+    height:auto;
     width: 100%;
     margin-left:100px;
     margin-right:100px;
     position:relative;
+    display:flex;
+    flex-direction:column;
+}
+.f_article_group{
     display:flex;
     flex-direction:row;
 }
@@ -328,11 +334,15 @@ span{
 /*featured news*/
 .f_news{
     grid-area:5/1/6/12;
-    height:20em;
+    height:auto;
     width: 100%;
     margin-left:100px;
     margin-right:100px;
     position:relative;
+    display:flex;
+    flex-direction:column;
+}
+.f_news_group{
     display:flex;
     flex-direction:row;
 }
@@ -343,7 +353,7 @@ span{
 }
 .f_news .news_card{
     width:15em;
-    height:120%;
+    height:100%;
     margin:1em;
     border-radius: 5px;
     border-width: 1px;
@@ -355,15 +365,14 @@ span{
     padding-right:1em;
 }
 .f_news .news_card a{
-    width:100%;
+    width: 100%;
     font-family:"Open Sans", sans-serif;
     font-weight: 400;
     font-size: 14px;
     color:#231F20;
     text-decoration: none;
-    display:flex;
-    align-self:flex-end;
-    justify-content: flex-end;
+    margin-left:10em;
+    margin-top:0em;
 }
 .f_news .news_card a:visited{
     color:#231F20;
@@ -377,4 +386,7 @@ span{
 .footer{
     grid-area: 6/1/7/12;
     position:relative;
+    width:100%;
+    margin-left:100px;
+    margin-right:100px;
 }
